# Blender-mcp

./: README.md  pyproject.toml  test_constraints.py  test_engine_final.py  test_modeling_tools.py  test_new_features.py  test_sculpt_tools.py
.github/workflows/: ci.yml
blender_mcp/: __init__.py
blender_mcp/core/: engine.py  gemini.py
blender_mcp/core/tools/: animation.py  asset.py  collection.py  compositor.py  constraint.py  data.py  deformation.py  driver.py  gpencil.py  hair.py  io.py  light.py  material.py  mesh.py  modeling.py  modifier.py  node.py  object.py  paint.py  physics.py  rigging.py  scene.py  sculpt.py  selection.py  sequencer.py  uv.py  workspace.py
blender_mcp/ui/: index.html  launcher.py
blender_mcp/utils/: deps.py  vision.py
docs/: capabilities_matrix.md  contracts.md  gemini_orchestration.md
src/blender_mcp/: __init__.py  __main__.py  app.py  server.py
src/blender_mcp/contracts/: __init__.py  canonical.py  errors.py  executor.py  registry.py  schemas.py
src/blender_mcp/transports/: __init__.py  http.py  stdio.py
tests/: test_contract_policy.py  test_contracts.py
